[project]
name = "tempo-workspace"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "prek>=0.3.13",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.ruff]
exclude = [
    "tempo-cli/src/tempo_cli/cli.py",
    "tempo-core/src/tempo_core/window_management.py"
]

[tool.ruff.lint]
select = [
    "ANN",
    "PTH",
    "N",
    "BLE",
    "YTT",
    "ASYNC",
    "B",
    "A",
    "COM",
    "C4",
    "EXE",
    "FA",
    "INT",
    "PIE",
    "T20",
    "PYI",
    "UP047"
]

[tool.ty.src]
include = ["tempo-core/src", "tempo-core/tests", "tempo-cli/src", "tempo-settings/src", "tempo-binary-tools/src", "tempo-binary-tool-manager/src"]
exclude = [
    "tempo-core/src/tempo_core/window_management.py",
]


[tool.typos]
[tool.typos.default]
extend-words = { ue = "ue" }
